# recheck-contract-concordium-rust

./: Cargo.toml  readme.md
concordium-out/: RecheckRecords_schema.json  module-schema.bs64  module.wasm.v1  recheck_schema.json
deploy-scripts/: Cargo.toml
deploy-scripts/src/: main.rs
src/: lib.rs  types.rs
tests/: tests.rs
types/: module.d.ts  module.js  module.ts  module_recheck.d.ts  module_recheck.js  module_recheck.ts
