# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "recheck"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ReCheck B.V. <info@recheck.io>"]

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
hex = "0.4"
concordium-std = { version = "10.0", default-features = false }

[dev-dependencies]
rand = "0.8"
concordium-smart-contract-testing = "4.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
